<resources>
    <string name="app_name">CE-1257218</string>
    <string name="action_settings">Settings</string>
    <string name="utilities">Public utility</string>
    <string name="inwork">In work</string>
    <string name="creation_date">Created</string>
    <string name="date_1">25 February 2016</string>
    <string name="registration_date">Registered</string>
    <string name="date2">26 February 2016</string>
    <string name="solution_date">Resolved before</string>
    <string name="date3">29 February 2016</string>
    <string name="responsible">Responsible</string>
    <string name="dp_mvk">Dnepropetrovsk MVK()</string>
    <string name="description">Opened hatch (near the billboard), turning the area on 18 and 19 trams at Prospect Mira with the Donetsk highway</string>

</resources>
