<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alp.yalantisfirsttask.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utilities"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/font_size"
                android:onClick="onClickToast"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/rounded_orange"
                android:padding="@dimen/padding"
                android:text="@string/inwork"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size"
                android:onClick="onClickToast"/>

        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/Left"
                android:text="@string/creation_date"
                android:onClick="onClickToast"/>

            <TextView
                android:id="@+id/textView4"
                style="@style/Right"
                android:text="@string/date_1"
                android:onClick="onClickToast"/>

        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                style="@style/Left"
                android:text="@string/registration_date"
                android:onClick="onClickToast"/>

            <TextView
                android:id="@+id/textView6"
                style="@style/Right"
                android:text="@string/date2"
                android:onClick="onClickToast"/>

        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                style="@style/Left"
                android:text="@string/solution_date"
                android:onClick="onClickToast"/>

            <TextView
                android:id="@+id/textView8"
                style="@style/Right"
                android:text="@string/date3"
                android:onClick="onClickToast"/>

        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                style="@style/Left"
                android:text="@string/responsible"
                android:onClick="onClickToast"/>

            <TextView
                android:id="@+id/textView10"
                style="@style/Right"
                android:text="@string/dp_mvk"
                android:onClick="onClickToast"/>

        </LinearLayout>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/colorDark"
            android:onClick="onClickToast"
            android:textSize="@dimen/font_size"
            android:text="@string/description"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClickToast"
            />

    </LinearLayout>

</ScrollView>
